assets/style.css
/* CSS */
.i{
    float: center;
}
nav {
    background-color: rgba(3, 3, 54, 0.918);
    color: white;
  }
  
  body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: rgb(197, 197, 202);
  }
  
  main {
    flex: 1 0 auto;
  }
   
   #filmLogo {
    color: white;
    size: 50px;
  }
    
  #filmLogo:hover {
    color:rgb(97, 97, 119);
  }   
  
  .input-field {
   color: black;
   background-color: white;  
  }
 
  .active {
    text-decoration: underline;
  }
  
  .popcorn {
    height: 303px;
    width: 100%;
      }

#mslogo {
    font-weight: bold;
  }
  .descriptiondiv {
    font-size: medium;
   }
  
   #searchBtn {
         background-color: rgba(3, 3, 54, 0.918);
   }
  
  .searchmovieBtn :hover {
    background-color: white;
    color: black
}
    
  .page-footer {
    background-color: transparent;
    color: black;
      font-weight: 300;
    margin-top: 30px;
    margin-bottom: 20px;
  }
  
#imgShannon {
  margin-top: 40px;
  border-radius: 50%;
  vertical-align: middle;
}

#imgAlex {
  margin-top: 40px;
  border-radius: 50%;
  text-align: center;
}

#imgVanesa {
  margin-top: 40px;
  border-radius: 50%;
  vertical-align: middle;
}

a { 
  color: inherit; 
}

p{
  position: fixed;
  color: black;
}
.fa-envelope {
  color:rgb(97, 97, 119)
}

.fa-envelope:hover {
  color:rgba(3, 3, 54, 0.918)

}

.help-tag {
  font-weight: 300;
  font-size: 20px;
  margin-bottom: 55px;
}

.banner
{
    max-width: 100%;
    height: auto;
}

#movieList {
  font-weight:bold;
}

#movie-search {
  font-size: xx-large;
  font-weight: bold;
  text-decoration: underline
}

@media screen and (max-width: 600px) {
  .col {
    width: 100%;
  }
}

